PRL-4036 Bulk scan change